[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analytics-bot"
version = "0.1.0"
authors = [
    { name = "fizzah-09" }
]
description = "AI-Driven Data Analysis Bot"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.29.0",
    "pandas==1.5.3",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "langchain==0.1.0",
    "langchain_experimental==0.0.49",
    "python-dotenv==1.0.0",
    "numpy==1.24.3",
    "langchain_google_genai==0.0.5"
]